Change display styles in button to correct misalignment

--- a/imports/client/styles/components/_button.scss
+++ b/imports/client/styles/components/_button.scss
@@ -3,6 +3,7 @@
   border: none;
   color: $button-color;
   cursor: pointer;
+  display: block;
   font-size: $base-font-size;
   line-height: 1.2;
   margin-bottom: $space;
